# exercism

./: .gitignore  README.md
clojure/accumulate/: README.md
clojure/all-your-base/: README.md
clojure/allergies/: README.md
clojure/armstrong-numbers/: project.clj
clojure/atbash-cipher/: README.md
clojure/bank-account/: README.md
clojure/binary/: README.md
clojure/binary-search/: README.md
clojure/binary-search-tree/: README.md
clojure/bird-watcher/: README.md
clojure/cars-assemble/: README.md
clojure/complex-numbers/: README.md
clojure/crypto-square/: README.md
clojure/gigasecond/: README.md
clojure/grains/: README.md
clojure/hexadecimal/: README.md
clojure/isbn-verifier/: project.clj
clojure/kindergarten-garden/: README.md
clojure/largest-series-product/: README.md
clojure/lucians-luscious-lasagna/: README.md
clojure/luhn/: README.md
clojure/meetup/: README.md
clojure/octal/: README.md
clojure/pascals-triangle/: README.md
clojure/perfect-numbers/: README.md
clojure/prime-factors/: README.md
clojure/queen-attack/: README.md
clojure/raindrops/: README.md
clojure/reverse-string/: project.clj
clojure/robot-name/: .nrepl-port
clojure/robot-simulator/: README.md
clojure/roman-numerals/: README.md
clojure/run-length-encoding/: project.clj
clojure/say/: README.md
elixir/: space_age.exs
elixir/bob/: bob.exs  (+1 more)
emacs-lisp/: .gitignore
fsharp/: .gitignore
haskell/complex-numbers/: complex-numbers.cabal
haskell/complex-numbers/src/: ComplexNumbers.hs
haskell/queen-attack/: queen-attack.cabal
haskell/queen-attack/src/: Queens.hs
haskell/triangle/: triangle.cabal
haskell/triangle/src/: Triangle.hs
racket/: .gitignore
rust/: .gitignore
(+1376 files in other folders)
