name:           queen-attack
version:        0.1.0.2
build-type:     Simple
cabal-version:  >= 1.10

library
  exposed-modules:
      Queens
  other-modules:
      Paths_queen_attack
  hs-source-dirs:
      src
  build-depends:
      base
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  other-modules:
      Paths_queen_attack
  hs-source-dirs:
      test
  build-depends:
      queen-attack
    , base
    , hspec
  default-language: Haskell2010
